update front end

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -63,7 +63,7 @@
                                                      asp-controller="BlogPosts"
                                                      asp-action="Index">
                                                         <span class="hover-flip-item">
-                                                            <span data-text="Manage Categories">Manage Blogs</span>
+                                                            <span data-text="Manage Blogs">Manage Blogs</span>
                                                         </span>
                                                 </a>
                                                </li>
@@ -89,7 +89,7 @@
                                                    asp-controller="Tags"
                                                    asp-action="Index">
                                                         <span class="hover-flip-item">
-                                                            <span data-text="Manage Categories">Manage Tags</span>
+                                                            <span data-text="Manage Tags">Manage Tags</span>
                                                         </span>
                                                     </a>
                                                 </li>
