--- a/Views/BlogPosts/Details.cshtml
+++ b/Views/BlogPosts/Details.cshtml
@@ -155,7 +155,7 @@
                                                         </a>
                                                     </h6>
                                                     <div class="comment-meta">
-                                                        <div class="time-spent">@comment.DateCreated.ToString("MM dd, YYYY at hh:mm tt")</div>
+                                                        <div class="time-spent">@comment.DateCreated.ToString("MM dd, yyyy AT hh:mm tt")</div>
                                                         <div class="reply-edit">
                                                            @* <div class="reply">
                                                                 <a class="comment-reply-link hover-flip-item-wrapper" href="#">
